k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /ble-connect(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ble-messenger
            port:
              number: 80
